# chaos-smelter

./: CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/routers/: process.py
backend/app/services/: audio.py  llm.py  synthesis.py  text.py
backend/prompts/: synthesize.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: DropZone.tsx  Icons.tsx  ProcessButton.tsx  ProgressBar.tsx  ResultsView.tsx  TextZone.tsx
frontend/src/hooks/: useWebSocket.ts
idea/: SMELT-project-brief.md  note-processor-v3.jsx  note-processor-v4.jsx
reference/: transcribe.py
