[project]
name = "smelt-backend"
version = "0.1.0"
description = "SMELT - Raw notes in, clean markdown out"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "websockets>=14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
